Fix divider spacing betwee book progress and chapter description

--- a/src/App.css
+++ b/src/App.css
@@ -174,8 +174,8 @@ header img {
   align-items: center;
   gap: 0.5rem;
   border-right: 1px solid var(--pale-gray);
-  padding-right: 1rem;
-  margin-right: 1rem;
+  padding-right: 5rem;
+  margin-right: 5rem;
 }
 
 .progress-image {
